Experimenting with key-based authentication.  Still not working.
I can add authorized_keys and confirm conservative file permissions:

$ <~/.ssh/id_ed25519.pub docker run --rm -i --user=git --volumes-from=containerterminal_git_1 containerterminal_git bash -c 'cat >> /home/git/.ssh/authorized_keys && chmod 600 /home/git/.ssh/authorized_keys && ls -alR /home/git'
/home/git:
total 12
drwx------    3 git      git           4096 Jan 26 14:10 .
drwxr-xr-x    3 root     root          4096 Jan 25 00:06 ..
drwx------    2 git      git           4096 Jan 26 14:32 .ssh

/home/git/.ssh:
total 12
drwx------    2 git      git           4096 Jan 26 14:32 .
drwx------    3 git      git           4096 Jan 26 14:10 ..
-rw-------    1 git      git             96 Jan 26 14:32 authorized_keys

But subsequent attempts to connect still fail:

$ ssh -i ~/.ssh/id_ed25519 -p 2200 git@$DOCKER_HOST_IP
Permission denied (publickey).

--- a/git/Dockerfile
+++ b/git/Dockerfile
@@ -3,10 +3,15 @@ MAINTAINER Eric Dobbs <eric@dobbse.net>
 
 RUN apk --no-cache add openssh git bash curl \
  && mkdir /var/run/sshd
-RUN printf "%s\n" "UseDNS no" "PasswordAuthentication no" >> /etc/ssh/sshd_config
+RUN printf "%s\n"\
+ "UseDNS no"\
+ "PasswordAuthentication no"\
+ "ChallengeResponseAuthentication no"\
+ "PermitRootLogin no"\
+ >> /etc/ssh/sshd_config
 RUN (source /etc/init.d/sshd && checkconfig)
-RUN addgroup git && adduser -S -D -s /bin/bash -h /home/git -G git git \
- && mkdir /home/git/.ssh && chown git:git /home/git/.ssh && chmod 700 /home/git/.ssh
+RUN addgroup git && adduser -D -s /usr/bin/git-shell -h /home/git -G git git \
+ && mkdir /home/git/.ssh && chown git:git /home/git/.ssh && chmod -R 700 /home/git
 VOLUME /home/git
 
 RUN curl -L https://github.com/joyent/containerbuddy/releases/download/0.0.5/containerbuddy-0.0.5.tar.gz | tar zx -C /usr/local/bin
@@ -16,4 +21,4 @@ ADD git-health-check.sh /usr/local/bin/git-health-check.sh
 EXPOSE 22
 CMD ["/usr/local/bin/containerbuddy", \
  "-config", "file:///usr/local/share/git.json", \
- "/usr/sbin/sshd", "-D"]
+ "/usr/sbin/sshd", "-d"]
