Got key-based authentication working under debian:jessie
git service remains incomplete.  Authentication works ok,
but sshd exits at the end of the first ssh session and
the current (basically unimplemented) container-buddy
health check does not trigger a restart of sshd.

I also suspect that sshd will need to fork to support
concurrent ssh connections.

Also noteworthy in this change, debian:jessie's adduser
command seemed to prefer long-form args.

Similar tricks to test this revision:
$ <~/.ssh/id_ed25519.pub docker run --rm -i --user=git --volumes-from=containerterminal_git_1 containerterminal_git bash -c 'cat >> /home/git/.ssh/authorized_keys && chmod 600 /home/git/.ssh/authorized_keys'
$ ssh -i ~/.ssh/id_ed25519 -p 2200 git@$DOCKER_HOST_IP

--- a/git/Dockerfile
+++ b/git/Dockerfile
@@ -1,7 +1,8 @@
-FROM alpine:3.3
+FROM debian:jessie
 MAINTAINER Eric Dobbs <eric@dobbse.net>
 
-RUN apk --no-cache add openssh git bash curl \
+RUN apt-get update \
+ && apt-get install -y openssh-server git bash curl \
  && mkdir /var/run/sshd
 RUN printf "%s\n"\
  "UseDNS no"\
@@ -9,8 +10,9 @@ RUN printf "%s\n"\
  "ChallengeResponseAuthentication no"\
  "PermitRootLogin no"\
  >> /etc/ssh/sshd_config
-RUN (source /etc/init.d/sshd && checkconfig)
-RUN addgroup git && adduser -D -s /usr/bin/git-shell -h /home/git -G git git \
+RUN addgroup git \
+ && adduser --disabled-password --shell=/usr/bin/git-shell --home=/home/git --ingroup=git \
+    --gecos="git access" git \
  && mkdir /home/git/.ssh && chown git:git /home/git/.ssh && chmod -R 700 /home/git
 VOLUME /home/git
 
