trying yet another base image for the git service
This one does not exit when the first connection
disconnects.

The following article described PID 1 and reaping
zombie processes, but also provided details about
how to test if your container does the right thing.
http://blog.dscpl.com.au/2015/12/issues-with-running-as-pid-1-in-docker.html

But it also pointed to https://github.com/krallin/tini
a minimal tool that just forwards signals and reaps
zombies.

So trying tini instead of container-buddy.  It
turns out 0.0.5 version of container-buddy does
not manage PID1 responsibilities.

I think it is the switch from -d to -D which allows
the container to survive the first ssh connection.
But that switch also means the sshd logs don't go
to stdout.

--- a/git/Dockerfile
+++ b/git/Dockerfile
@@ -1,4 +1,4 @@
-FROM debian:jessie
+FROM krallin/ubuntu-tini:trusty
 MAINTAINER Eric Dobbs <eric@dobbse.net>
 
 RUN apt-get update \
@@ -16,11 +16,5 @@ RUN addgroup git \
  && mkdir /home/git/.ssh && chown git:git /home/git/.ssh && chmod -R 700 /home/git
 VOLUME /home/git
 
-RUN curl -L https://github.com/joyent/containerbuddy/releases/download/0.0.5/containerbuddy-0.0.5.tar.gz | tar zx -C /usr/local/bin
-
-ADD git.json /usr/local/share/git.json
-ADD git-health-check.sh /usr/local/bin/git-health-check.sh
 EXPOSE 22
-CMD ["/usr/local/bin/containerbuddy", \
- "-config", "file:///usr/local/share/git.json", \
- "/usr/sbin/sshd", "-d"]
+CMD ["/usr/sbin/sshd", "-D"]
