Added gitrun service and updated docs in README
I love this trick.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,3 +31,11 @@ git:
   build: git/
   ports:
     - "2200:22/tcp"
+
+gitrun:
+  build: git/
+  volumes_from:
+    - git
+  user: git
+  working_dir: /home/git
+  command: ["true"]
