switched git image to use buildpack-deps/jessie for its base.
The next containers in this chain of experiments use nginx and node
images which are each based on jessie.

--- a/git/Dockerfile
+++ b/git/Dockerfile
@@ -1,19 +1,27 @@
-FROM krallin/ubuntu-tini:trusty
+FROM buildpack-deps:jessie
 MAINTAINER Eric Dobbs <eric@dobbse.net>
 
+ENV TINI_VERSION v0.9.0
 RUN apt-get update \
- && apt-get install -y openssh-server git bash curl \
- && mkdir /var/run/sshd
-RUN printf "%s\n"\
- "UseDNS no"\
- "PasswordAuthentication no"\
- "ChallengeResponseAuthentication no"\
- "PermitRootLogin no"\
- >> /etc/ssh/sshd_config
-RUN addgroup git \
+ && apt-get install -y --no-install-recommends openssh-server \
+ && rm -rf /var/lib/apt/lists/*
+ && mkdir /var/run/sshd \
+ && printf "%s\n"\
+  "UseDNS no"\
+  "PasswordAuthentication no"\
+  "ChallengeResponseAuthentication no"\
+  "PermitRootLogin no"\
+  >> /etc/ssh/sshd_config \
+ && addgroup git \
  && adduser --disabled-password --shell=/usr/bin/git-shell --home=/home/git --ingroup=git \
     --gecos="git access" git \
- && mkdir /home/git/.ssh && chown git:git /home/git/.ssh && chmod -R 700 /home/git
+ && mkdir /home/git/.ssh && chown git:git /home/git/.ssh && chmod -R 700 /home/git \
+ && curl -Lo /tini https://github.com/krallin/tini/releases/download/${TINI_VERSION}/tini\
+ && curl -Lo /tini.asc https://github.com/krallin/tini/releases/download/${TINI_VERSION}/tini.asc\
+ && gpg --keyserver ha.pool.sks-keyservers.net --recv-keys 0527A9B7 \
+ && gpg --verify /tini.asc \
+ && chmod +x /tini
+ENTRYPOINT ["/tini", "--"]
 VOLUME /home/git
 
 EXPOSE 22
