--- a/jenkins.yml
+++ b/jenkins.yml
@@ -1,12 +1,6 @@
 version: '2'
 
 services:
-  jenkins:
-    image: jenkins:1.642.2
-    ports:
-      - 8080:8080
-    volumes:
-      - jenkins:/var/jenkins_home
   server:
     build: jenkins-server/
     ports:
@@ -14,16 +8,16 @@ services:
       - 50000:50000
     volumes:
       - server:/var/jenkins_home
+      - /var/run/docker.sock:/var/run/docker.sock
   node:
     build: jenkins-node/
     volumes:
       - node:/var/jenkins_home
+      - /var/run/docker.sock:/var/run/docker.sock
     ports:
       - 22/tcp
 
 volumes:
-  jenkins:
-    driver: local
   server:
     driver: local
   node:
