minor change to git service with a complete rewrite of README.
These changes reflect a slightly deeper understanding of how to apply
one docker image to both daemonized processes and single-use
processes.  Where I used to have a git service and a gitrun service, I
now have a single git service which I use for both kinds of processes.

--- a/git/Dockerfile
+++ b/git/Dockerfile
@@ -4,7 +4,7 @@ MAINTAINER Eric Dobbs <eric@dobbse.net>
 ENV TINI_VERSION v0.9.0
 RUN apt-get update \
  && apt-get install -y --no-install-recommends openssh-server \
- && rm -rf /var/lib/apt/lists/*
+ && rm -rf /var/lib/apt/lists/* \
  && mkdir /var/run/sshd \
  && printf "%s\n"\
   "UseDNS no"\
