moving docker-compose .yml files inside their related folders
The root folder of the project was looking cluttered.  Tab-completion
in the shell was getting noisy.  Both seemed like symptoms that I
was fighting the tools instead of letting them do their work.  I also
think there's less to document and explain, and one less command
argument to include in helper scripts if the docker-compose config
files follow the conventional default named docker-compose.yml.

--- a/gapi/docker-compose.yml
+++ b/gapi/docker-compose.yml
@@ -2,7 +2,7 @@ version: '2'
 
 services:
   gapi:
-    image: containerterminal_coffee:latest
+    image: coffee_coffee:latest
     volumes:
       - google:/usr/src/app
 
