moved jenkins experiment into a single folder to match my new pattern
This reorganization is made possible by the version: "2" config format
for docker-compose.  I can specify the name of the Dockerfile.

One cool feature I learned today... I'm disconnected from the internet
as I make these changes.  Even though I have changed the name of
the parent directory, 'docker-compose build' was able to find all the
images in my local copies.

--- a/jenkins/docker-compose.yml
+++ b/jenkins/docker-compose.yml
@@ -2,7 +2,9 @@ version: '2'
 
 services:
   server:
-    build: jenkins-server/
+    build:
+      context: .
+      dockerfile: Dockerfile-server
     ports:
       - 8080:8080
       - 50000:50000
@@ -10,7 +12,9 @@ services:
       - server:/var/jenkins_home
       - /var/run/docker.sock:/var/run/docker.sock
   node:
-    build: jenkins-node/
+    build:
+      context: .
+      dockerfile: Dockerfile-node
     volumes:
       - node:/var/jenkins_home
       - /var/run/docker.sock:/var/run/docker.sock
