--- a/jenkins/Dockerfile-server
+++ b/jenkins/Dockerfile-server
@@ -22,8 +22,7 @@ RUN printf "%s\n"\
   > /usr/share/jenkins/ref/plugins.txt \
  && /usr/local/bin/plugins.sh /usr/share/jenkins/ref/plugins.txt
 USER root
-RUN curl -sSL https://get.docker.com/builds/Linux/x86_64/docker-1.10.3 -o /bin/docker \
- && curl -L https://github.com/docker/compose/releases/download/1.6.2/docker-compose-Linux-x86_64\
-    -o /bin/docker-compose \
- && chmod +x /bin/docker /bin/docker-compose
+RUN curl -L https://github.com/docker/compose/releases/download/1.6.2/docker-compose-Linux-x86_64\
+    -o /usr/bin/docker-compose \
+ && chmod +x /usr/bin/docker-compose
 USER jenkins
