--- a/jenkins/Dockerfile-server
+++ b/jenkins/Dockerfile-server
@@ -6,14 +6,10 @@ RUN printf "%s\n"\
   "matrix-auth:1.1" \
   "credentials:1.25" \
   "script-security:1.13" \
-  "docker-build-step:1.34" \
   "external-monitor-job:1.4" \
-  "docker-commons:1.3.1" \
   "durable-task:1.8" \
-  "docker-custom-build-environment:1.6.5" \
   "antisamy-markup-formatter:1.1" \
   "icon-shim:2.0.3" \
-  "docker-plugin:0.16.0" \
   "scm-api:1.0" \
   "ssh-credentials:1.11" \
   "ssh-slaves:1.9" \
@@ -25,4 +21,5 @@ USER root
 RUN curl -L https://github.com/docker/compose/releases/download/1.6.2/docker-compose-Linux-x86_64\
     -o /usr/bin/docker-compose \
  && chmod +x /usr/bin/docker-compose
+RUN adduser jenkins users
 USER jenkins
