Added a gcloud service for experimenting with Google Cloud
For example, to follow this quickstart
https://cloud.google.com/bigquery/bq-command-line-tool-quickstart

docker-compose build gcloud
alias bq="docker-compose run --rm gcloud bq"

Now 'bq' commands can be run from the command line.

--- a/gapi/docker-compose.yml
+++ b/gapi/docker-compose.yml
@@ -5,7 +5,17 @@ services:
     image: coffee_coffee:latest
     volumes:
       - google:/usr/src/app
-
+  gcloud:
+    build:
+      context: .
+      dockerfile: Dockerfile-gcloud
+    volumes:
+      - gcloud:/.config
+      - repo:/default
 volumes:
   google:
+    driver: local
+  gcloud:
+    driver: local
+  repo:
     driver: local
