added jenkins cli service to automate more things
Many of the resources I've found on the web point to the jenkins-cli.jar
as the path to automating the configuration of jenkins.  So wrapping
that in another docker-compose service

--- a/jenkins/docker-compose.yml
+++ b/jenkins/docker-compose.yml
@@ -11,6 +11,13 @@ services:
     volumes:
       - server:/var/jenkins_home
       - /var/run/docker.sock:/var/run/docker.sock
+  cli:
+    build:
+      context: .
+      dockerfile: Dockerfile-cli
+    volumes:
+      - server:/var/jenkins_home
+      - /var/run/docker.sock:/var/run/docker.sock
   node:
     build:
       context: .
