jupyter is now served behind an nginx proxy
also moved some config out of Dockerfile and into
jupyter_notebook_config.py

using docker-compose to mount the config files for both
jupyter notebook and nginx because they're coupled with
each other and with docker-compose names anyway.

These resources where helpful in figuring out the configs
http://stackoverflow.com/a/23912400
http://jupyter-notebook.readthedocs.io/en/latest/public_server.html

--- a/jupyter/docker-compose.yml
+++ b/jupyter/docker-compose.yml
@@ -6,9 +6,16 @@ services:
       context: .
       dockerfile: jupyter-Dockerfile
     volumes:
-      - notebooks:/opt/notebooks
+      - "notebooks:/opt/notebooks"
+      - "./jupyter_notebook_config.py:/root/.jupyter/jupyter_notebook_config.py"
+  nginx:
+    image: nginx:1.10.1
+    volumes:
+      - "./nginx-jupyter.conf:/etc/nginx/conf.d/default.conf"
     ports:
-      - "8888:8888"
+      - "80:80"
+    depends_on:
+      - jupyter
 
 volumes:
   notebooks:
