--- a/jupyter/nginx-jupyter.conf
+++ b/jupyter/nginx-jupyter.conf
@@ -7,7 +7,7 @@ server {
     listen       80;
     server_name  localhost;
 
-    location ~* ^\/jupyter {
+    location /jupyter {
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
