--- a/jenkins/docker-compose.yml
+++ b/jenkins/docker-compose.yml
@@ -3,33 +3,13 @@ version: '2'
 services:
   server:
     build:
-      context: .
-      dockerfile: Dockerfile-server
+      context: ./server
     ports:
       - 8080:8080
       - 50000:50000
     volumes:
       - server:/var/jenkins_home
-      - /var/run/docker.sock:/var/run/docker.sock
-  cli:
-    build:
-      context: .
-      dockerfile: Dockerfile-cli
-    volumes:
-      - server:/var/jenkins_home
-      - /var/run/docker.sock:/var/run/docker.sock
-  node:
-    build:
-      context: .
-      dockerfile: Dockerfile-node
-    volumes:
-      - node:/var/jenkins_home
-      - /var/run/docker.sock:/var/run/docker.sock
-    ports:
-      - 22/tcp
 
 volumes:
   server:
-    driver: local
-  node:
     driver: local
