vault now configured with consul backend
no longer running in -dev mode which means we have
to manually unseal the vault.

vault prevents virtual memory paging secrets to disk by default
so we add IPC_LOCK to the vault container:
e.g. docker run --cap-add=IPC_LOCK ...

copied the initial vault.hcl from this document
https://www.vaultproject.io/docs/config/index.html
but changed the 127.0.0.1 IP addresses to the host
names that are managed by docker-compose.

--- a/yak/docker-compose.yml
+++ b/yak/docker-compose.yml
@@ -9,3 +9,9 @@ services:
   vault:
     image: vault:0.6.1
     restart: unless-stopped
+    cap_add:
+      - IPC_LOCK  # prevent memory from swapping to disk
+    volumes:
+      - "./vault/config:/vault/config"
+    command: >-
+      server
