proved to myself the vault container can do pki
Following this tutorial with my own modifications for docker:
http://cuddletech.com/?p=959

Also making extensive notes to capture my variations.  Buried among the
certificates there's also a confirmation that I can restart the vault
container and still access the secrets (because they're stored in
consul)

I don't have consul configured to persist the data yet, so I'll almost
certainly loose all the CA setup when I shutdown that container.

--- a/yak/docker-compose.yml
+++ b/yak/docker-compose.yml
@@ -4,10 +4,12 @@ services:
   consul:
     image: consul:v0.7.0
     ports:
-    - 8500:8500
+      - 8500:8500
     restart: unless-stopped
   vault:
     image: vault:0.6.1
+    ports:
+      - 8200:8200
     restart: unless-stopped
     cap_add:
       - IPC_LOCK  # prevent memory from swapping to disk
