added names service backed by dnsmasq
still needs a little love around the dnsmasq configuration
but good enough for now

--- a/yak/docker-compose.yml
+++ b/yak/docker-compose.yml
@@ -17,3 +17,12 @@ services:
       - "./vault/config:/vault/config"
     command: >-
       server
+  names:
+    build:
+      context: ./names
+    ports:
+      - "53:53/tcp"
+      - "53:53/udp"
+    restart: unless-stopped
+    cap_add:
+      - NET_ADMIN
