yak names gets domain from environment
containerpilot prestart hook calls consul-template to generate
/etc/dnsmasq.conf at container startup

--- a/yak/docker-compose.yml
+++ b/yak/docker-compose.yml
@@ -27,5 +27,5 @@ services:
     cap_add:
       - NET_ADMIN
     environment:
-      - "DOMAIN=swim"
+      - "DOMAIN=yak"
       - "IP=192.168.99.100"
